added get started page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <nav>
                     <a href="#">Courses</a>
                     <a href="#">About Us</a>
-                    <button>Get Started</button>
+                    <a id="getStarted" href="getstarted.html">Get Started</a>
                 </nav>
             </div>
         </div>
