added page heading

--- a/getstarted.html
+++ b/getstarted.html
@@ -22,6 +22,7 @@
      </div>
 
     <div class="getStartedCard">
+        <h1>Sign Up Today to Get Started</h1>
         <form>
             
             <label for="firstName"><h4>First Name:</h4></label>
